Fixed Right side overflow on main page

--- a/static/style_forms.css
+++ b/static/style_forms.css
@@ -5,6 +5,9 @@
   --medium-gray: #e0e0e0;
   --dark-gray: #333;
 }
+html, body {
+  overflow-x: hidden;
+}
 
 body {
   margin: 0;
